Sun Dec 19 17:52:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/QOS/Change_Sender_TSpec/receiver.cpp:
        * examples/QOS/Change_Sender_TSpec/sender.cpp:
        * examples/QOS/Change_Sender_TSpec/QoS_Util.{h,cpp}:
          Fixed compile error in unicode build

        * examples/QOS/Change_Sender_TSpec/QOS_Change_Sender_FlowSpec.mpc:
        * examples/QOS/Change_Sender_TSpec/QOS_Change_Sender_TSpec.mpc:
          Renamed to match directory name

Sun Dec 19 15:46:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_time.h:
          Fixed incorrect comment after endif

Sun Dec 19 16:35:34 2004  Olli Savia  <ops@iki.fi>

        * ace/README:
          Updated ACE_HAS_PREDEFINED_THREAD_CANCELLED_MACRO description.

        * ace/config-lynxos.h:
          Added ACE_HAS_PREDEFINED_THREAD_CANCELLED_MACRO and removed
          ACE_POLL_IS_BROKEN.

Sun Dec 19 10:45:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/QOS/Change_Receiver_FlowSpec/sender.cpp:
        * examples/QOS/Diffserv/diffserv_test.cpp:
        * examples/QOS/Diffserv/server.cpp:
          Fixed compile error in unicode build

Sun Dec 19 01:32:05 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * ace/config-win32-msvc.h:

          Added a if not defined guard to the QT_DLL definition.

Sat Dec 18 10:03:41 2004  Olli Savia  <ops@iki.fi>

        * ace/README:
          Added ACE_HAS_PREDEFINED_THREAD_CANCELLED_MACRO.

        * tests/Malloc_Test.cpp:
          There is no reason not to compile this test on LynxOS. It doesn't
          work but there are now better chances that it will be fixed some
          day.

Fri Dec 17 13:53:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS.inl:
          Corrected comment after #endif

Fri Dec 17 13:41:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.cpp: